# roosty

./: .convco  .dockerignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  roost-implementation-spec.md  roosty-implementation-spec.md
.github/workflows/: ci.yml  container.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: entity.rs  lib.rs
crates/db/src/entity/: admin_audit_log.rs  job.rs  local_account.rs  local_account_block.rs  local_account_mute.rs  local_actor_key.rs  local_conversation.rs  local_conversation_account.rs  local_conversation_remote_participant.rs  local_featured_tag.rs  local_follow.rs  local_list.rs  local_list_local_member.rs  local_list_remote_member.rs  local_media_attachment.rs  local_notification.rs  local_notification_permission.rs  local_notification_policy.rs  local_notification_request.rs  local_remote_account_block.rs  local_remote_account_mute.rs  local_remote_status_favourite.rs  local_remote_status_reblog.rs  local_status.rs  local_status_bookmark.rs  local_status_edit.rs  local_status_edit_media.rs  local_status_favourite.rs  local_status_local_mention.rs  local_status_local_recipient.rs  local_status_pin.rs  local_status_reblog.rs  local_status_remote_mention.rs  local_status_tag.rs  local_tag.rs  local_tag_follow.rs  local_timeline_marker.rs  oauth_access_token.rs  oauth_application.rs  oauth_authorization_code.rs  (+22 more)
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260701_000001_create_job_table.rs  m20260701_000002_create_local_account_table.rs  m20260701_000003_create_oauth_tables.rs  m20260701_000004_add_local_account_settings.rs  m20260701_000005_create_local_status_table.rs  m20260701_000006_create_local_status_favourite_table.rs  m20260701_000007_create_local_status_bookmark_table.rs  m20260701_000008_create_local_follow_table.rs  m20260701_000009_add_collection_cursor_ids.rs  m20260701_000010_create_local_media_attachment_table.rs  m20260701_000011_add_local_media_preview_metadata.rs  m20260701_000012_add_local_account_profile_images.rs  m20260701_000013_create_local_notification_table.rs  m20260701_000014_create_local_status_reblog_table.rs  m20260701_000015_allow_reblog_notifications.rs  m20260701_000016_create_local_conversation_tables.rs  m20260701_000017_create_local_tag_tables.rs  m20260701_000018_create_local_tag_follow_table.rs  m20260701_000019_create_local_timeline_marker_table.rs  m20260701_000020_create_local_account_moderation_tables.rs  m20260701_000021_create_local_actor_key_table.rs  m20260701_000022_create_remote_actor_table.rs  m20260701_000023_create_remote_follow_tables.rs  m20260701_000024_allow_remote_notification_actors.rs  m20260701_000025_constrain_job_attempts_nonnegative.rs  m20260701_000026_create_remote_status_table.rs  m20260701_000027_create_remote_following_table.rs  m20260701_000028_add_remote_status_notifications.rs  m20260701_000029_add_remote_reply_targets.rs  m20260701_000030_add_remote_status_references.rs  m20260701_000031_create_local_status_remote_mention.rs  m20260701_000032_create_federated_favourite_tables.rs  m20260701_000033_create_federated_reblog_tables.rs  m20260701_000034_create_remote_media_attachment.rs  m20260701_000035_add_job_claim_id.rs  m20260701_000036_add_remote_actor_profile_created_at.rs  m20260701_000037_create_remote_profile_media.rs  m20260701_000038_add_remote_actor_lifecycle.rs  m20260701_000039_add_remote_media_preview_metadata.rs  (+28 more)
crates/migration/tests/: migrations.rs
crates/server/: Cargo.toml
crates/server/src/: accounts.rs  admin.rs  auth.rs  compat.rs  config.rs  conversations.rs  featured_tags.rs  federation.rs  http.rs  instance.rs  lists.rs  main.rs  markers.rs  media.rs  notifications.rs  password.rs  push.rs  search.rs  statuses.rs  streaming.rs  test_postgres.rs  version.rs  web.rs
crates/server/src/federation/: discovery.rs  test_transport.rs
crates/web-push/: Cargo.toml
crates/web-push/src/: crypto.rs  endpoint.rs  lib.rs  vapid.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: app.rs  authorization.rs  bootstrap.rs  forms.rs  lib.rs
crates/web-ui/style/: main.css
deploy/: Caddy.Containerfile  Caddyfile  Caddyfile.production  Containerfile  compose.production.yaml  compose.yaml  test-elk-login.sh
deploy/ansible/: ansible.cfg  site.yml
deploy/ansible/inventories/production/: hosts.yml
deploy/ansible/inventories/production/group_vars/: roosty.yml
deploy/ansible/roles/roosty/defaults/: main.yml
deploy/ansible/roles/roosty/handlers/: main.yml
deploy/ansible/roles/roosty/tasks/: main.yml
deploy/ansible/roles/roosty/templates/: Caddyfile.j2  env.j2
docs/: compatibility.md  development.md  frontend.md  roadmap.md
