[package]
name = "roost-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roost-core.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
