[package]
name = "roosty-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roosty-core = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
rand_core = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
