[package]
name = "roosty-migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
sea-orm-migration = { workspace = true }

[dev-dependencies]
postgresql_embedded = { workspace = true }
sea-orm = { workspace = true }
test-context = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
