[package]
name = "roost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roost-core = { workspace = true }
roost-db = { workspace = true }
roost-migration = { workspace = true }
argon2 = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
axum-params = { workspace = true }
base64 = { workspace = true }
blurhash = { workspace = true }
clap = { workspace = true }
hmac = { workspace = true }
image = { workspace = true }
rand_core = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
postgresql_embedded = { workspace = true }
tempfile = { workspace = true }
test-context = { workspace = true }
tower = { workspace = true }
