[package]
name = "roost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
roost-core.workspace = true
roost-db.workspace = true
roost-migration.workspace = true
argon2.workspace = true
axum.workspace = true
clap.workspace = true
rand_core.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
