[package]
name = "roosty-web-push"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
httpdate = { workspace = true }
p256 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2-v11 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
